# BroPix_Lighthouse

./: .gitignore  PRD.md  config.json  pyproject.toml  requirements.txt
.cursor/rules/: frontend-build.mdc  python-quality-checks.mdc
.github/workflows/: ci.yml
data/: lighthouse.db
frontend/: index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: App.jsx  StatisticsPage.jsx  styles.css
src/: __init__.py  camera.py  detector.py  main.py  object_detection.py  speed_utils.py  web_app.py  web_main.py
src/config/: __init__.py  service.py
src/lighthouse/: __init__.py  controller.py  implementations.py
src/processing/: __init__.py  frame_processor.py  speed_limit_checker.py  track_manager.py
src/storage/: __init__.py  database.py  models.py  service.py
tests/: test_camera_config.py  test_camera_init.py  test_camera_stream.py  test_detector.py  test_frame_processor.py  test_main.py  test_main_pytest.py  test_red_hold_logic.py  test_speed_limit_checker.py  test_speed_utils.py  test_storage_integration.py  test_storage_service.py  test_track_manager.py
